Fix gap

--- a/src/pages/about/About.scss
+++ b/src/pages/about/About.scss
@@ -58,7 +58,7 @@
   .jth-about-experience {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 5rem;
+    gap: 2rem;
 
     .jth-about-experience-list {
       display: grid;
